--- a/index.html
+++ b/index.html
@@ -268,7 +268,7 @@
 
     
     <div class="col-md-4">
-      <img src="Images/Team Leaders/Imanoli Arias.jpg" class="fit-image" alt="IMANOLI ARIAS IMAGE">
+      <img src="Images/Team Leaders/Imanoli Arias.jpg" alt="IMANOLI ARIAS IMAGE">
       <h1 class="fs-4">IMANOLI ARIAS</h1>
     </div>
 
