--- a/index.html
+++ b/index.html
@@ -274,7 +274,7 @@
 
     
     <div class="col-md-4">
-      <img src="Images\Team Leaders\Javier Bardem.jpg" class="fit-image" alt="JAVIER BARDEM IMAGE">
+      <img src="Images\Team Leaders\Javier Bardem.jpg" alt="JAVIER BARDEM IMAGE">
       <h1 class="fs-4">JAVIER BARDEM</h1>
     </div>
 
