--- a/index.html
+++ b/index.html
@@ -361,6 +361,8 @@
        </div>
     </section>
 
+
+
 <section class="container my-5">
   <div class="row justify-content-center">
     <form >
@@ -398,12 +400,12 @@
 
     <button type="submit" class="btn btn-primary w-25 d-block mx-auto">Sign In</button>
 
-
   </form>
   </div>
+
 </section>
 
-  
+
 
   <footer class="footer1">
     <div class="footer-section">
@@ -435,24 +437,15 @@
     </div>
   </footer>
 
-  <section class="bottom">
+  
+  <section class="bottom-footer">
     <div class="footer-bottom">
     Copyright © 2020 - SLIIT WEB DEVELOPMENT - All rights reserved
   </div>
 
-
   </section>
 
   
-
-
-
-   
-   
-
-
-
-
 
 
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js" integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r" crossorigin="anonymous"></script>
